# 2026-Technosignature-Search

./: .agent-project-id  .gh_pr_create_verification_test.md  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  scan_summary_output.txt  validate_all_output.txt
.claude/: settings.json  settings.local.json  statusline.sh
.codex/: config.toml
_manual_cap_test/: status.json
configs/: anomaly_search_v0.json  background_priority_v0.json  gbt_hip99427_cadence_v1.json  infrared_search_v0.json  radio_search_v0.json  scoring_calibrated_v1.json  scoring_v0.json  scoring_v1_template.json
data/: bl_hprc_full_seed_targets.csv  bl_hprc_full_targets_vizier.csv  bl_hprc_seed_targets.csv  target_sample_manifest.json
data_selection/: bl_archive_candidate_catalog.csv  data_role_registry.yaml  data_selection_decision_log.md  followup_priority_queue.csv  live_search_policy.md  target_priority_queue.csv  training_data_policy.md
docs/: AI_HARDENING_REVIEW_PROTOCOL.md  ANOMALY_SEARCH_SPEC.md  BACKGROUND_SEARCH_AUTOMATION_BLUEPRINT.md  BL_DATA_DOWNLOAD.md  CALIBRATION_FIXTURES.md  CALIBRATION_TRANSFER_PROTOCOL.md  CATALOG_CACHE_POLICY.md  CI.md  CITIZEN_SCIENCE_REVIEW.md  CLI_USAGE.md  CONSOLE_OUTPUT_SPEC.md  DATA_POLICY.md  DECISIONS.md  EXTERNAL_SUBMISSION_PROTOCOL.md  False_Positive_Technosignature_Case_Studies.md  INFRARED_SEARCH_SPEC.md  KNOWN_LIMITATIONS.md  LIVE_DATA_INTEGRATIONS.md  LIVE_PROVIDER_IMPLEMENTATION_PLAN.md  LIVE_PROVIDER_INTERFACES.md  LOCAL_DATA_INVENTORY.md  LOCAL_SYSTEM_PROFILE.md  PIPELINE_SPEC.md  PRODUCTION_READINESS.md  PRODUCTION_SCAN_GUIDE.md  PRODUCTION_SCAN_RUNBOOK.md  PROJECT_STATUS.md  PUBLISHING.md  RADIO_SEARCH_SPEC.md  REAL_OBSERVATION_INTAKE.md  RELEASE_CHECKLIST.md  RFI_OPERATOR_REVIEW_PROTOCOL.md  ROADMAP.md  SAMPLING_DESIGN.md  SCAN_SCHEDULE.md  SCHEMA_VERSIONING.md  SCORING_MODEL.md  SUBMISSION_PATHWAYS.md  SYSTEMATIC_SEARCH_PLAN.md  SYSTEM_PROFILE.md  (+20 more)
hitran_xsc_downloads/: C2F6_298.1K-760.0Torr_500.0-6500.0_0.11_N2_197_43.xsc  C3F8_298.1K-760.0Torr_600.0-6500.0_0.11_N2_208_43.xsc  CF4_298.1K-760.0Torr_570.0-6500.0_0.11_N2_207_43.xsc  NF3_298.1K-760.0Torr_600.0-6500.0_0.11_N2_186_43.xsc  SF6_298.1K-760.0Torr_560.0-6500.0_0.11_N2_220_43.xsc
logs/: README.md
results/: zenodo_manifest.json
schemas/: access_control_log.schema.json  access_log.schema.json  ai_hardening_gate.schema.json  alert_escalation_log.schema.json  alert_resolution_log.schema.json  antenna_pointing_log.schema.json  archival_query_log.schema.json  asset_management_log.schema.json  audit_finding_log.schema.json  audit_trail_log.schema.json  background_draft_follow_up_reports.schema.json  background_draft_report_manifest.schema.json  background_follow_up_tests.schema.json  (+203 more)
(+1127 files in other folders)
