[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "techno-search"
version = "1.1.0"
description = "Conservative, reproducible technosignature-interest candidate search tooling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "astropy>=6.0",
    "pandas>=2.2",
    "certifi>=2024.1",
    "rich>=13.7",
]

[project.scripts]
techno-search = "techno_search.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]
science = [
    "numpy>=1.26",
    "scipy>=1.13",
    "astropy>=6.0",
    "pandas>=2.2",
    "scikit-learn>=1.4",
]
radio = [
    "blimpy>=2.1",
    "setuptools>=68,<81",
    "turbo-seti==2.3.2",
]
ml = [
    "scikit-learn>=1.4",
    "setigen>=2.7",
]
track_a = [
    "scikit-learn>=1.4",
    "pyarrow>=15",
    "joblib>=1.3",
    "ucimlrepo>=0.0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration_live: tests that require live external services or data access",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/techno_search/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "ucimlrepo.*", "joblib.*", "pandas.*", "pyarrow.*"]
ignore_missing_imports = true
